2006-10-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct (configure): Do not check for /bin/sh.

2006-10-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile: explicit dependencies for .otftable files.

	* Documentation/topdocs/NEWS.tely (Top): add FretBoards example. 

	* input/regression/fret-boards.ly: new file.

	* po/de.po: new po courtesy translation team.

	* scripts/lilypond-book.py (get_option_parser): add newline to doc
	string.

2006-10-27  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/gregorian-init.ly (neumeDemoLayout): update
	minimumVerticalExtent -> VerticalAxisGroup #'minimum-Y-extent 

	* scm/define-context-properties.scm, ly/engraver-init.ly: Remove
	obsolete verticalExtent / extraVerticalExtent / minumumVerticalExtent

2006-10-27  Erlend Aasland  <erlenda@gmail.com>

	* GNUmakefile.in ($(tree-share-prefix)/mf-link-tree link-mf-tree):
	Yet another build fix.

2006-10-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* SConstruct (lilypondprefix): use sorted() for list_sort()
	indent 4

2006-10-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/SConscript: Unit test rules.

	* flower/test-std.cc: Compile fix.

2006-10-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* python/midi.c (pymidi_parse_track): warning fixes.

	* lily/dot-column.cc (struct Dot_position): initialize extremal_head_
	include dot-column.hh

2006-10-26  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ {basic-, global}: minor changes from mailist.

2006-10-26  Erlend Aasland  <erlenda@gmail.com>

	* scm/define-grobs.scm: trivial beautification

	* lily/tie-performer.cc: no need to #include "pqueue.hh"

	* lily/source-file.cc: put multibyte var inside #if clause

	* scm/define-grob-interfaces.scm:
	* scm/define-grob-properties.scm:
	Build fix (string-fret-finger-combinations)

	* Documentation/topdocs/INSTALL.texi: Remove obsolete info about
	lexer-gcc-3.1.sh

	* Documentation/user/lilypond-book.itely: Build fix.
